clusters/wrtk8s/timesync/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timesync-tailscale
  namespace: default
spec:
  ingressClassName: tailscale
  rules:
    - host: time
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timesync
                port:
                  number: 80
  tls:
    - hosts:
        - time
